# omni-evaluator

./: LICENSE  NOTICE  README.ko.md  README.md  launch_server.py  pyproject.toml  run.py  tox.ini
dashboard/: README.md  requirements.txt
dashboard/internal/: .gitignore  README.md  kill-and-start.sh  run-backend.sh
dashboard/internal/backend/: .env.example  requirements.txt
dashboard/public/: .gitignore  data.json  index.html  public.css  public.js
demo/: README.md
docs/: TASKS.md
omni_evaluator/: __init__.py  __main__.py  args.py  evaluate.py  infer.py
omni_evaluator/api/: __init__.py  chat_completions.py  completions.py  model_supporting.py  routing.py
omni_evaluator/api/anthropic/: __init__.py  chat_completions.py
omni_evaluator/api/google/: __init__.py  chat_completions.py
omni_evaluator/api/openai/: __init__.py  chat_completions.py  completions.py  responses.py
omni_evaluator/api/resources/: model_supporting.yaml
omni_evaluator/clients/: s3_client.py
omni_evaluator/enums/: __init__.py  dataset.py  engine.py  evaluation.py  media.py  task.py
omni_evaluator/evaluation/: common.py  prepare_dataset.py
omni_evaluator/evaluation/builtin/: README.md  engine.py
omni_evaluator/evaluation/lm_eval_harness/: README.md  engine.py
omni_evaluator/evaluation/lmms_eval/: README.md  engine.py  patches.py
omni_evaluator/evaluation/metrics/: _interface.py  constants.py  image_evaluator.py  judge_evaluator.py  text_evaluator.py  verifier.py
omni_evaluator/evaluation/vlm_eval_kit/: README.md  __init__.py  engine.py
omni_evaluator/inference/: __init__.py  capabilities.py  prompts.py
omni_evaluator/inference/api/: README.md  __init__.py  engine.py
omni_evaluator/inference/huggingface/: README.md  __init__.py  _interface.py  engine.py  model_groups.py
omni_evaluator/inference/sglang/: README.md  __init__.py  chat_completions.py  completions.py  engine.py
omni_evaluator/inference/vllm/: README.md  __init__.py  chat_completions.py  completions.py  engine.py
omni_evaluator/modules/image_generation/: __init__.py  _interface.py
omni_evaluator/postprocess/: __init__.py  _interface.py  custom.py
omni_evaluator/postprocess/asr/: __init__.py
omni_evaluator/postprocess/binary/: __init__.py
omni_evaluator/postprocess/code/: __init__.py
omni_evaluator/postprocess/freeform/: __init__.py
omni_evaluator/postprocess/multichoice/: __init__.py
omni_evaluator/postprocess/spatial_grounding/: __init__.py
omni_evaluator/postprocess/temporal_grounding/: __init__.py
omni_evaluator/schemas/: __init__.py  chat.py  evaluation.py  generation_options.py  inference.py  task.py
omni_evaluator/submission/: leaderboard.py
omni_evaluator/utils/: common.py  cpu.py  data.py  io.py  multimodal.py  optional_import.py  patches.py  resource.py  response.py  string.py  torch.py
scripts/: collect_env.py
scripts/create_task/: README.md  build_dataset.py  build_frame_variants.py  preprocess_video.py
submodules/: README.md
submodules/_packaging/AudioBench/: setup.py
submodules/_packaging/CharXiv/: setup.py
submodules/_packaging/Tar/: setup.py
submodules/_packaging/VoiceBench/: setup.py
tests/: CLAUDE.md  README.md  conftest.py  test_launch_server.py  test_model_groups_consistency.py
tests/api/: CLAUDE.md  conftest.py  test_chat_completions.py  test_completions.py  test_model_supporting.py  test_routing.py
tests/api/anthropic/: conftest.py  test_chat_completions.py
tests/api/google/: conftest.py  test_chat_completions.py
tests/api/openai/: conftest.py  test_chat_completions.py  test_responses.py
tests/clients/: CLAUDE.md  conftest.py  test_s3_client.py
tests/configs/evaluation/: builtin.yaml
tests/configs/inference/: _template.yaml  api_anthropic.yaml  api_google.yaml  api_openai.yaml  sglang.yaml  vllm.yaml
tests/engine_parity/inference/: test_vision_image.py
tests/entrypoints/: CLAUDE.md  conftest.py  test_errors.py  test_evaluate.py  test_help.py  test_list.py
tests/evaluation/: CLAUDE.md  conftest.py  test_common.py  test_engine_common.py
tests/evaluation/builtin/: test_engine.py
tests/evaluation/lm_eval_harness/: test_engine.py
tests/evaluation/lmms_eval/: test_engine.py
tests/evaluation/metrics/: _judge_cases.py  _text_cases.py  test_image_evaluator.py  test_judge_evaluator.py  test_lib_metrics.py  test_text_evaluator.py  test_verifier.py
tests/evaluation/vlm_eval_kit/: test_engine.py
tests/inference/: CLAUDE.md  _smoke_inputs.py  conftest.py  test_engine_common.py
tests/inference/api/: test_engine.py
tests/inference/huggingface/: _adapter_registry.py  conftest.py  test_engine.py  test_huggingface_adapter_common.py
tests/pipelines/: CLAUDE.md  test_pipeline.py
tests/postprocess/: CLAUDE.md  conftest.py  test_custom.py
tests/schemas/: CLAUDE.md  conftest.py  test_chat.py  test_evaluation.py  test_generation_options.py  test_inference.py  test_schemas_common.py  test_task.py
tests/submission/: test_leaderboard.py
tests/utils_/: CLAUDE.md  conftest.py  test_common.py  test_data.py  test_io.py  test_multimodal.py  test_patches.py  test_resource.py  test_response.py  test_string.py  test_torch.py
(+470 files in other folders)
