[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni_evaluator"
version = "3.0.1"
description = "A unified benchmarking toolkit for LLMs and multimodal models, supporting on-device and API-based inference with Hugging Face, vLLM, and SGLang, and enabling evaluation across text, image, and video benchmarks using lmms-eval, lm-evaluation-harness, and VLMEvalKit."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.11"

dependencies = [
    "absl-py",
    "audioread",
    "accelerate",
    "anls",
    "anthropic",
    "apted",
    "argparse==1.4.0",
    "av",
    "bitsandbytes",
    "bert-score",
    "beautifulsoup4",
    "boto3",
    "clip-benchmark",
    "datasets>=4.0.0",
    "dateparser",
    "decord",
    "deepspeed>=0.14.5",
    "diffusers",
    "distance",
    "easydict",
    "editdistance",
    "einops==0.6.1",
    "evaluate>=0.4.6",
    "ffmpeg",
    "fire==0.4.0",
    "google-genai",
    "google-generativeai",
    "httpx[http2]",
    "html5lib",
    "huggingface_hub>=0.34.0",
    "immutabledict",
    "inflect",
    "jieba",
    "jiwer>=3.0.0,<4.0.0",
    "langdetect",
    "Levenshtein",
    "latex2sympy2<=1.9.0",
    "latex2sympy2_extended",
    "Levenshtein",
    "librosa",
    "litellm",
    "llama-cpp-python",
    "loguru",
    "lxml",
    "math_verify>=0.9.0",
    "moviepy",
    "nltk",
    "numpy>=1.26",
    "omegaconf",
    "openai>=2.8.1",
    "open-clip-torch",
    "opencv-python>=4.10.0.84",
    "openpyxl",
    "pillow>=10.4.0",
    "protobuf>=3.20",
    "pyarrow>=15.0.0",
    "pycocoevalcap",
    "pydub",
    "python-dotenv",
    "pylatexenc",
    "Polygon3",
    "pyturbojpeg==1.7.3",
    "pywsd",
    "qwen-vl-utils[decord]",
    "qwen-omni-utils",
    "rich>=14.2.0",
    "rouge",
    "rouge_score",
    "sacrebleu",
    "scikit-learn>=1.4.2",
    "simple-parsing",
    "smart_open",
    "soundfile",
    "sox",
    "soxr",
    "torch>=2.7.1,<2.8",
    "torchaudio>=2.7.1,<2.8",
    "torchcodec>=0.4.0,<0.5",
    "torchmetrics>=1.5.0",
    "torchvision>=0.22.1,<0.23",
    "transformers>=4.57.0",
    "vector_quantize_pytorch",
    "vocos",
    "xgboost",
    "zss",
]

[project.optional-dependencies]
# evaluation engines
lmms_eval = [
    "lmms_eval @ git+https://github.com/EvolvingLMMs-Lab/lmms-eval.git@540724a5250672b03dc6a6b4b38cff39d5868eb6",  # main/2026.03.14
]
lm_eval = [
    "lm_eval[ifeval,longbench,math,multilingual,ruler] @ git+https://github.com/EleutherAI/lm-evaluation-harness@d800e04dcb1ce96791d8b2926cf0cc7703d58457",  # main/2026.03.14
]
vlmeval = [
    "vlmeval @ git+https://github.com/open-compass/VLMEvalKit.git@00804217f868058f871f5ff252a7b9623c3475d9",  # main/2026.03.14
]
# model frameworks
deepseek_vl = [
    "deepseek_vl @ git+https://github.com/deepseek-ai/DeepSeek-VL.git@681bffb4519856ad27cc17531aacde31ddf6f1a7",  # main/2026.02.04
]
emu3 = [
    "emu3 @ git+https://github.com/baaivision/Emu3.git@9d0ae34f766e017dc81e19bed9cf2c3b0ec82086",  # main/2025.12.25
]
janus = [
    "janus @ git+https://github.com/deepseek-ai/Janus.git@1daa72fa409002d40931bd7b36a9280362469ead",  # main/2025.12.25
]
minicpmo = [
    "minicpmo",
    "minicpmo-utils[all]",
    "onnx",
    "onnxruntime",
    "hyperpyyaml",
]
voxtral = [
    "mistral-common[audio]",
]
# Optional VoiceBench eval support. `qa_metrics` hard-pins scikit-learn==1.3.2
# which conflicts with the project's scikit-learn>=1.4.2 (needed for NumPy 2.x ABI).
# Install with: `pip install -e '.[voicebench]' --no-deps` then resolve qa_metrics
# in an isolated env, or rely on the GPT-only fallback in lmms-eval.
voicebench = [
    "qa_metrics",
]
test = [
    "pytest",
    "pytest-timeout",
]
# NOTE: `unbabel-comet` is required for COMET metric (fleurs_*_2*_test) but
# its strict pins (`transformers<5`, `torchmetrics<0.11`, `huggingface_hub<1.0`,
# `numpy<2.0`, ...) conflict with the project's modern stack. Listing it as
# either a regular dep or an extra causes the resolver to fail — its runtime
# works fine despite those metadata pins, so install it directly with --no-deps:
#   uv pip install --no-deps unbabel-comet
# See README.md "Optional: COMET" section.

[tool.setuptools.packages.find]
where = ["."]
include = ["omni_evaluator*"]

[tool.setuptools.package-data]
omni_evaluator = ["**/*.yaml", "**/*.json", "**/*.jsonl", "**/*.parquet", "**/*.csv", "**/*.txt", "**/*.xlsx", "**/*.md"]

[tool.pytest.ini_options]
addopts = "-v"

# Pin torch/torchvision/torchaudio to PyTorch's cu126 wheel index.
# The default PyPI ships newer wheels (e.g. 2.11.0+cu130) whose bundled NCCL
# requires symbols absent from any NCCL shipped with this stack, causing
# `undefined symbol: ncclDevCommDestroy` at import. cu126 wheels ship a
# matching NCCL and work with NVIDIA driver 535.x (V100 sm_70).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]
